2009-09-25  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Gavin Barraclough.

        Add ARM version detection rules for Symbian
        https://bugs.webkit.org/show_bug.cgi?id=29715

        * wtf/Platform.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@48756 bbb929c8-8fbe-4397-9dbb-9b2b20218538